projects/compiler/test/typechecker/assignment/variable_error_alias_fn.out
Error at %FILE_NAME%:3:1
Cannot assign to variable 'foo'
  |  foo = 123
     ^
'foo' is a function, which cannot be overwritten
